# enn-sdk-samples-v920-linux

./: README.md
Object-Dectection/DAMO-YOLO/: CMakeLists.txt  README.md  build.sh  enn_sample_damo_yolo.cc  push_extrafiles.sh  run_damoyolo.sh
Object-Dectection/DAMO-YOLO/include/: enn_sample_utils.hpp
Pose-Estimation/HRNet/: CMakeLists.txt  README.md  build.sh  enn_sample_hrnet.cc  push_extrafiles.sh  run_hrnet.sh  weston_setup.sh
Pose-Estimation/HRNet/include/: enn_api-public.hpp  enn_api-type.h  enn_sample_utils.hpp
